// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render 1`] = `
<button
  class="css-view-175oi2r r-touchAction-1otgn73 r-cursor-1loqt21 r-outlineWidth-10paoce r-transition-71lksq r-userSelect-lrvibr r-alignItems-1awozwy r-backgroundColor-1fz3o5x r-borderRadius-y47klf r-boxShadow-iidqr2 r-flexDirection-18u37iz r-height-eu3ka r-justifyContent-1777fci r-paddingInline-cxgwc0 md3-media-17h1dt4 md3-media-1ev2qvy"
  data-class="Button-root ButtonBase-root"
  role="button"
  type="button"
>
  <div
    style="color: rgb(103, 80, 164); display: contents;"
  >
    <div
      class="css-text-1rynq56 r-fontFamily-rxj5oj r-fontSize-1b43r93 r-fontWeight-majxgm r-letterSpacing-8ay8q1 r-lineHeight-rjixqe r-textAlign-q4m81j"
      data-class="Button-label Text-root"
      dir="auto"
      style="color: rgb(103, 80, 164);"
    >
      Hello World
    </div>
  </div>
  <span
    class="r-borderRadius-sqpuna r-bottom-1p0dtai r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-transition-sp8bj3 r-zIndex-1wyyakw"
    data-class="ButtonBase-hover"
    style="background-color: rgb(103, 80, 164); opacity: 0;"
  />
  <span
    class="r-borderRadius-sqpuna r-bottom-1p0dtai r-left-1d2f490 r-overflow-1udh08x r-position-u8s1d r-right-zchlnj r-top-ipm5af r-zIndex-417010"
    data-class="ButtonBase-rippleContainer"
  />
</button>
`;

exports[`<Button /> should render a button with icon 1`] = `
<button
  class="css-view-175oi2r r-touchAction-1otgn73 r-cursor-1loqt21 r-outlineWidth-10paoce r-transition-71lksq r-userSelect-lrvibr r-alignItems-1awozwy r-backgroundColor-1fz3o5x r-borderRadius-y47klf r-boxShadow-iidqr2 r-flexDirection-18u37iz r-height-eu3ka r-justifyContent-1777fci r-paddingInline-cxgwc0 md3-media-17h1dt4 md3-media-1ev2qvy"
  data-class="Button-root ButtonBase-root"
  role="button"
  type="button"
>
  <div
    style="color: rgb(103, 80, 164); display: contents;"
  >
    <div
      class="css-view-175oi2r r-marginInlineEnd-1wron08 r-marginInlineStart-m5k245"
      data-class="Button-icon"
    >
      <span
        height="18"
        width="18"
      >
        icon
      </span>
    </div>
    <div
      class="css-text-1rynq56 r-fontFamily-rxj5oj r-fontSize-1b43r93 r-fontWeight-majxgm r-letterSpacing-8ay8q1 r-lineHeight-rjixqe r-textAlign-q4m81j"
      data-class="Button-label Text-root"
      dir="auto"
      style="color: rgb(103, 80, 164);"
    >
      Hello World
    </div>
  </div>
  <span
    class="r-borderRadius-sqpuna r-bottom-1p0dtai r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-transition-sp8bj3 r-zIndex-1wyyakw"
    data-class="ButtonBase-hover"
    style="background-color: rgb(103, 80, 164); opacity: 0;"
  />
  <span
    class="r-borderRadius-sqpuna r-bottom-1p0dtai r-left-1d2f490 r-overflow-1udh08x r-position-u8s1d r-right-zchlnj r-top-ipm5af r-zIndex-417010"
    data-class="ButtonBase-rippleContainer"
  />
</button>
`;

exports[`<Button /> should render a filled button 1`] = `
<button
  class="css-view-175oi2r r-touchAction-1otgn73 r-cursor-1loqt21 r-outlineWidth-10paoce r-transition-71lksq r-userSelect-lrvibr r-alignItems-1awozwy r-backgroundColor-15l9ap5 r-borderRadius-y47klf r-boxShadow-cnhr7f r-flexDirection-18u37iz r-height-eu3ka r-justifyContent-1777fci r-paddingInline-cxgwc0 md3-media-iwmwhq md3-media-1ld86pe"
  data-class="Button-root ButtonBase-root"
  role="button"
  type="button"
>
  <div
    style="color: rgb(255, 255, 255); display: contents;"
  >
    <div
      class="css-text-1rynq56 r-fontFamily-rxj5oj r-fontSize-1b43r93 r-fontWeight-majxgm r-letterSpacing-8ay8q1 r-lineHeight-rjixqe r-textAlign-q4m81j"
      data-class="Button-label Text-root"
      dir="auto"
      style="color: rgb(255, 255, 255);"
    >
      Hello World
    </div>
  </div>
  <span
    class="r-borderRadius-sqpuna r-bottom-1p0dtai r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-transition-sp8bj3 r-zIndex-1wyyakw"
    data-class="ButtonBase-hover"
    style="background-color: rgb(255, 255, 255); opacity: 0;"
  />
  <span
    class="r-borderRadius-sqpuna r-bottom-1p0dtai r-left-1d2f490 r-overflow-1udh08x r-position-u8s1d r-right-zchlnj r-top-ipm5af r-zIndex-417010"
    data-class="ButtonBase-rippleContainer"
  />
</button>
`;

exports[`<Button /> should render a text button 1`] = `
<button
  class="css-view-175oi2r r-touchAction-1otgn73 r-cursor-1loqt21 r-outlineWidth-10paoce r-transition-71lksq r-userSelect-lrvibr r-alignItems-1awozwy r-borderRadius-y47klf r-boxShadow-cnhr7f r-flexDirection-18u37iz r-height-eu3ka r-justifyContent-1777fci r-minWidth-1v6e3re r-paddingInline-cxgwc0 r-paddingInlineEnd-faml9v r-paddingInlineEnd-2dysd3"
  data-class="Button-root ButtonBase-root"
  role="button"
  type="button"
>
  <div
    style="color: rgb(103, 80, 164); display: contents;"
  >
    <div
      class="css-text-1rynq56 r-fontFamily-rxj5oj r-fontSize-1b43r93 r-fontWeight-majxgm r-letterSpacing-8ay8q1 r-lineHeight-rjixqe r-textAlign-q4m81j"
      data-class="Button-label Text-root"
      dir="auto"
      style="color: rgb(103, 80, 164);"
    >
      Hello World
    </div>
  </div>
  <span
    class="r-borderRadius-sqpuna r-bottom-1p0dtai r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-transition-sp8bj3 r-zIndex-1wyyakw"
    data-class="ButtonBase-hover"
    style="background-color: rgb(103, 80, 164); opacity: 0;"
  />
  <span
    class="r-borderRadius-sqpuna r-bottom-1p0dtai r-left-1d2f490 r-overflow-1udh08x r-position-u8s1d r-right-zchlnj r-top-ipm5af r-zIndex-417010"
    data-class="ButtonBase-rippleContainer"
  />
</button>
`;

exports[`<Button /> should render a tonal button 1`] = `
<button
  class="css-view-175oi2r r-touchAction-1otgn73 r-cursor-1loqt21 r-outlineWidth-10paoce r-transition-71lksq r-userSelect-lrvibr r-alignItems-1awozwy r-backgroundColor-oc2s68 r-borderRadius-y47klf r-boxShadow-cnhr7f r-flexDirection-18u37iz r-height-eu3ka r-justifyContent-1777fci r-paddingInline-cxgwc0 md3-media-iwmwhq md3-media-1ld86pe"
  data-class="Button-root ButtonBase-root"
  role="button"
  type="button"
>
  <div
    style="color: rgb(29, 25, 43); display: contents;"
  >
    <div
      class="css-text-1rynq56 r-fontFamily-rxj5oj r-fontSize-1b43r93 r-fontWeight-majxgm r-letterSpacing-8ay8q1 r-lineHeight-rjixqe r-textAlign-q4m81j"
      data-class="Button-label Text-root"
      dir="auto"
      style="color: rgb(29, 25, 43);"
    >
      Hello World
    </div>
  </div>
  <span
    class="r-borderRadius-sqpuna r-bottom-1p0dtai r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-transition-sp8bj3 r-zIndex-1wyyakw"
    data-class="ButtonBase-hover"
    style="background-color: rgb(29, 25, 43); opacity: 0;"
  />
  <span
    class="r-borderRadius-sqpuna r-bottom-1p0dtai r-left-1d2f490 r-overflow-1udh08x r-position-u8s1d r-right-zchlnj r-top-ipm5af r-zIndex-417010"
    data-class="ButtonBase-rippleContainer"
  />
</button>
`;

exports[`<Button /> should render an elevated button 1`] = `
<button
  class="css-view-175oi2r r-touchAction-1otgn73 r-cursor-1loqt21 r-outlineWidth-10paoce r-transition-71lksq r-userSelect-lrvibr r-alignItems-1awozwy r-backgroundColor-1fz3o5x r-borderRadius-y47klf r-boxShadow-iidqr2 r-flexDirection-18u37iz r-height-eu3ka r-justifyContent-1777fci r-paddingInline-cxgwc0 md3-media-17h1dt4 md3-media-1ev2qvy"
  data-class="Button-root ButtonBase-root"
  role="button"
  type="button"
>
  <div
    style="color: rgb(103, 80, 164); display: contents;"
  >
    <div
      class="css-text-1rynq56 r-fontFamily-rxj5oj r-fontSize-1b43r93 r-fontWeight-majxgm r-letterSpacing-8ay8q1 r-lineHeight-rjixqe r-textAlign-q4m81j"
      data-class="Button-label Text-root"
      dir="auto"
      style="color: rgb(103, 80, 164);"
    >
      Hello World
    </div>
  </div>
  <span
    class="r-borderRadius-sqpuna r-bottom-1p0dtai r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-transition-sp8bj3 r-zIndex-1wyyakw"
    data-class="ButtonBase-hover"
    style="background-color: rgb(103, 80, 164); opacity: 0;"
  />
  <span
    class="r-borderRadius-sqpuna r-bottom-1p0dtai r-left-1d2f490 r-overflow-1udh08x r-position-u8s1d r-right-zchlnj r-top-ipm5af r-zIndex-417010"
    data-class="ButtonBase-rippleContainer"
  />
</button>
`;

exports[`<Button /> should render an outlined button 1`] = `
<button
  class="css-view-175oi2r r-touchAction-1otgn73 r-cursor-1loqt21 r-outlineWidth-10paoce r-transition-71lksq r-userSelect-lrvibr r-alignItems-1awozwy r-backgroundColor-1niwhzg r-borderColor-1t01w60 r-borderRadius-y47klf r-borderWidth-rs99b7 r-boxShadow-cnhr7f r-flexDirection-18u37iz r-height-eu3ka r-justifyContent-1777fci r-paddingInline-10tapur md3-media-12nxpqr"
  data-class="Button-root ButtonBase-root"
  role="button"
  type="button"
>
  <div
    style="color: rgb(103, 80, 164); display: contents;"
  >
    <div
      class="css-text-1rynq56 r-fontFamily-rxj5oj r-fontSize-1b43r93 r-fontWeight-majxgm r-letterSpacing-8ay8q1 r-lineHeight-rjixqe r-textAlign-q4m81j"
      data-class="Button-label Text-root"
      dir="auto"
      style="color: rgb(103, 80, 164);"
    >
      Hello World
    </div>
  </div>
  <span
    class="r-borderRadius-sqpuna r-bottom-1p0dtai r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-transition-sp8bj3 r-zIndex-1wyyakw"
    data-class="ButtonBase-hover"
    style="background-color: rgb(103, 80, 164); opacity: 0;"
  />
  <span
    class="r-borderRadius-sqpuna r-bottom-1p0dtai r-left-1d2f490 r-overflow-1udh08x r-position-u8s1d r-right-zchlnj r-top-ipm5af r-zIndex-417010"
    data-class="ButtonBase-rippleContainer"
  />
</button>
`;
